k8s/modify-del-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modify-del-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modify-del-service
  template:
    metadata:
      labels:
        app: modify-del-service
    spec:
      containers:
        - name: modify-del-service
          image: kienghok/modify_del_service:latest
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: modify-del-service
spec:
  selector:
    app: modify-del-service
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 5003
